--- a/public/builds.html
+++ b/public/builds.html
@@ -6,9 +6,23 @@
 </head>
 
 <body >
-    <h1>welcome to default template</h1>
+    <div id="app">
+        <h1>welcome to default template</h1>
+        <form class=""  method="post">
+            <label> send message
+                <input type="text" name="" v-model='message'>
+                <div class="">
+                    {{message}}
+                </div>
+                <input @click='send_message' type="button" name="" value="Send">
+            </label>
+        </form>
+    </div>
+
+
      <!-- <script src='../js/axios.js'></script> -->
     <!-- <script src='https://unpkg.com/vue'></script> -->
+    <script src='../js/vue.js'></script>
     <script src='../js/app.js'></script>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
 
